# Final_Vision_Cafe_Delivery

./: README.md
coffee_delivery/: CMakeLists.txt  command.txt  package.xml
coffee_delivery/include/coffee_delivery/: hole_plate_segmentation.h
coffee_delivery/rviz/: filter_rivz.rviz
coffee_delivery/src/: bag_to_pcl_conversion.cpp  centroid.cpp  hole_plate_segmentation.cpp  ros_hole_perception.cpp
coffee_service_perception/: CMakeLists.txt  command.txt  package.xml
coffee_service_perception/hole_perception_src/: hole_perception_action.cpp  hole_perception_estimate_center.cpp  hole_perception_extration.cpp  hole_perception_segmentation.cpp
coffee_service_perception/include/coffee_service_perception/: hole_perception_action.h  hole_perception_estimate_center.h  hole_perception_extration.h  hole_perception_segmentation.h  hole_plate_segmentation.h
coffee_service_perception/rviz/: filter_rivz.rviz  try.rviz
coffee_service_perception/src/: bag_to_pcl_conversion.cpp  hole_perception_action.cpp  hole_plate_segmentation.cpp  pcl_hole_perception.cpp  ros_hole_perception.cpp
coffee_service_perception/urdf/: command.txt  my_cylinder.urdf  portable_cup.urdf  portable_cup_2.urdf
custom_interfaces/: CMakeLists.txt
custom_interfaces/action/: FindHolePosition.action  PickAndPlace.action  PickAndPlace_.action
custom_interfaces/srv/: ActivateAction.srv
docker/: Dockerfile_coffee_delivery  command.txt  docker-compose.yml
moveit2_scripts/: CMakeLists.txt  command.txt  package.xml
moveit2_scripts/config/: arm_config.yaml  arm_real_config.yaml
moveit2_scripts/launch/: All_Exec_Real.launch.py  All_Exec_Sim.launch.py  pick_and_place.launch.py  pick_and_place_action.launch.py  pick_and_place_cup.launch.py  pick_and_place_cup_real.launch.py  pick_and_place_real.launch.py
moveit2_scripts/src/: pick_and_place.cpp  pick_and_place_cup.cpp  pick_and_place_cup_real.cpp  pick_and_place_real.cpp  scene.cpp
moveit2_scripts/src_real/: pick_and_place_cup_real.cpp  pick_and_place_real.cpp  pick_and_place_real_action.cpp  pick_service.cpp  take_cup_back.cpp
moveit2_scripts/src_sim/: pick_and_place.cpp  scene.cpp
moveit2_scripts/src_store/: cup.txt  pick_and_place_cup.cpp
moveit_config_real/: .setup_assistant  CMakeLists.txt  package.xml
moveit_config_real/config/: kinematics.yaml  moveit_filter.rviz  name.srdf
moveit_config_real/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
moveit_config_sim/: CMakeLists.txt  package.xml
moveit_config_sim/config/: kinematics.yaml  name.srdf
moveit_config_sim/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
my_custom_bag_name/: metadata.yaml
universal_robot_ros2/Universal_Robots_ROS2_Description/urdf/: ur.urdf.xacro
universal_robot_ros2/Universal_Robots_ROS2_Gazebo_Simulation/ur_simulation_gazebo/config/: ur_controllers_rg2.yaml
universal_robot_ros2/barista_ros2/barista_description/robot/: barista_mod.xacro
universal_robot_ros2/barista_ros2/barista_gazebo/launch/: barista_1.launch.py
universal_robot_ros2/the_construct_office_gazebo/worlds/: starbots_complete.world
webpage/: index.html  styles.css
webpage/succeed/: index.html  main.js
